--- a/src/3D_Viewer/forms/mainwindow.ui
+++ b/src/3D_Viewer/forms/mainwindow.ui
@@ -17,7 +17,7 @@
    <string notr="true">background-color: rgb(70, 70, 200);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QWidget" name="openGLWidget" native="true">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -25,6 +25,9 @@
       <width>831</width>
       <height>801</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>false</bool>
     </property>
     <layout class="QGridLayout" name="gridLayout_widget"/>
    </widget>
@@ -1161,14 +1164,25 @@ background-color: rgb(70, 70, 217);</string>
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="gif_button">
     <property name="geometry">
      <rect>
-      <x>1000</x>
-      <y>814</y>
-      <width>89</width>
+      <x>1010</x>
+      <y>820</y>
+      <width>101</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+        color: white;
+    	   background-color: rgb(91, 87, 217);
+        border-radius: 2px;
+}
+
+ QPushButton:pressed {
+    background-color: rgba(91, 87, 217, 100);
+}</string>
     </property>
     <property name="text">
      <string>GIF</string>
